Moved the project to a newer Unity version. Fully fixed the problem with android saying: "this application was made for an older version of android."

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Small project.sln"
+    "dotnet.defaultSolution": "PopBalloons.sln"
 }
